[metadata]
name = jupyter_rs_radia
author = RadiaSoft LLC
author_email=support@sirepo.com
version = attr: jupyter_rs_radia._version.__version__
description = Radia widget for Jupyter
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/RadiaSoft LLC/jupyter_rs_radia
keywords = ipython, widgets, Jupyter, JupyterLab, JupyterLab3
license = Apache-2.0
classifiers =
    License :: OSI Approved :: BSD License
    Development Status :: 4 - Beta
    Framework :: IPython
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Framework :: Jupyter
    Framework :: Jupyter :: JupyterLab
    Framework :: Jupyter :: JupyterLab :: 3
    Framework :: Jupyter :: JupyterLab :: Extensions
    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    ipywidgets>=7.6.0,<9
python_requires = >=3.7
